--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ yfinance>=0.2.18
 # Web Scraping
 requests>=2.31.0
 beautifulsoup4>=4.12.0
+aiohttp>=3.8.0
 
 # Built-in modules (no installation needed):
 # - sqlite3 (built into Python)
